<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.sfera.Stock_IV.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/button2"
        android:fontFamily="@font/ubuntu"
        android:text="@string/compound_rate_calculator"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/button2"
        android:fontFamily="@font/ubuntu"
        android:text="@string/intrinsic_value_calculator"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/button2"
        android:fontFamily="@font/ubuntu"
        android:text="@string/graham_intrinsic_value"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/button2"
        android:fontFamily="@font/ubuntu"
        android:text="@string/further_information"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/button2"
        android:fontFamily="@font/ubuntu"
        android:text="@string/about"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/version"
        android:text="@string/version"
        android:gravity="bottom|right"
        android:focusable="false"
        android:layout_marginRight="12.5dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/ubuntu"
        android:textSize="4pt"
        android:textColor="#ffffff"/>


</RelativeLayout>
