<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.sfera.Stock_IV.CompoundActivity"
    tools:showIn="@layout/activity_compound">


    <ScrollView
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:id="@+id/scrollView"
        android:verticalScrollbarPosition="defaultPosition"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:focusable="false"
            android:focusableInTouchMode="false">

            <EditText
                android:id="@+id/NBV"
                android:layout_width="369dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="41dp"
                android:ems="10"
                android:focusable="false"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/newBookValue"
                android:inputType="number|numberDecimal"
                android:onClick="nbv_click"
                android:singleLine="true"
                android:backgroundTint="@android:color/holo_red_light"
                android:textColorHint="#F6F6F6"
                android:textColor="@android:color/white"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:layout_marginTop="10dp"
                android:inputType="number|numberDecimal"
                android:ems="10"
                android:id="@+id/OBV"
                android:hint="@string/old_book_value"
                android:onClick="obv_click"
                android:focusable="false"
                android:backgroundTint="@android:color/holo_red_light"
                android:textColorHint="#F6F6F6"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/YEAR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/of_years_between_book_values"
                android:inputType="number|numberDecimal"
                android:onClick="year_click"
                android:backgroundTint="@android:color/holo_red_light"
                android:textColorHint="#F6F6F6"
                android:textColor="@android:color/white"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:inputType="number|numberDecimal"
                android:ems="10"
                android:id="@+id/CCALC"
                android:hint="@string/calculate"
                android:clickable="true"
                android:onClick="compoundValue"
                android:focusable="false"
                android:layout_marginTop="200dp"
                android:backgroundTint="@android:color/holo_red_light"
                android:textColorHint="#F6F6F6"
                android:textColor="@android:color/white"/>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>
