<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.sfera.Stock_IV.HowToActivity"
    tools:showIn="@layout/activity_how_to">

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="\nIntrinsic Value Calculator"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:fontFamily="@font/ubuntu"
                android:textSize="9pt"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/about_content"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:editable="false"
                android:focusable="false"
                android:fontFamily="@font/ubuntu"
                android:text="@string/about_content"
                android:textSize="7pt"
                android:textColor="@android:color/white"/>

            <LinearLayout android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="400dp">
                <WebView
                    android:id="@+id/formula_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:textSize="14sp"
                    android:fontFamily="@font/ubuntu"
                    android:scrollbars="none"
                    android:background="@android:color/darker_gray"/>
            </LinearLayout>

            <TextView
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="\nGraham Intrinsic Value"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:fontFamily="@font/ubuntu"
                android:textSize="9pt"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/graham_about_content"
                android:text="@string/graham_about_content"
                android:editable="false"
                android:focusable="false"
                android:fontFamily="@font/ubuntu"
                android:textSize="7pt"
                android:textColor="@android:color/white"/>

            <LinearLayout android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="250dp">
                <WebView
                    android:id="@+id/formula_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:textSize="14sp"
                    android:fontFamily="@font/ubuntu"
                    android:scrollbars="none"
                    android:background="@android:color/darker_gray"/>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/disclaimer"
                android:text="@string/GoodLuck"
                android:gravity="center_horizontal"
                android:fontFamily="@font/ubuntu"
                android:textSize="7pt"
                android:textColor="@android:color/black"/>




        </LinearLayout>


    </ScrollView>


</RelativeLayout>
